<resources>
    <string name="app_name">FinancialNotesNotifApp</string>
    <string name="action_settings">Settings</string>
    <string name="hint_keterangan">Keterangan</string>
    <string name="hint_jumlah_uang">Jumlah Uang</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_set_reminder">Set Reminder</string>
    <string name="notification_title">Reminder!</string>
    <string name="notification_message">Jangan lupa mencatat keuangan hari ini!</string>
    <string name="jumlah_uang">Jumlah Uang</string>
    <string name="simpan">Menyimpan</string>
    <string name="navigasi_tab">Navigasi Tab</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="fab_add_note">Add Note</string>
    <string name="add_note_activity_title">Add Notes Activity</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="notification_settings">Notification Settings</string>
</resources>